# ml-rgr

./: .gitignore  README.md  app.py  prepair.ipynb  pyproject.toml  requirements.txt
RGR/: rgr_ml_fit_titul.docx
data/: students_clean.csv
models/: catboost_model.cbm  feature_names.pkl  gradient_boosting.pkl  logistic_regression.pkl  model_results.csv  neural_network.keras  scaler.pkl
pages/: 1_👨‍💻_О_разработчике.py  2_📊_Датасет.py  3_📈_Визуализации.py  4_🤖_Предсказания.py
